# gamebaby-20190707-frozen

./: CMakeLists.txt  README  earth_maker_sdl.cpp  mkanigra_sdl.cpp  mkbg_sdl.cpp  mkeyesquat.cpp  mkfont_sdl.cpp  mkgif.sh  mkicon_sdl.cpp  mkpatgra_sdl.cpp  mksnd_sdl.cpp  png2lit.cpp  sdl.hpp  sdl_control.cpp  sdl_screen.cpp  sdl_sound.cpp  shell.html  test_sdl.cpp  vgi_sdl.cpp  ww_sdl.cpp
libgbstd/: CMakeLists.txt  character.hpp  clock.cpp  clock.hpp  control.cpp  control.hpp  draw_task_list.cpp  file_op.hpp  image.hpp  instruction_queue.cpp  instruction_queue.hpp  job.hpp  menu.hpp  parser.hpp  process.cpp  process.hpp  sound.hpp  stage.cpp  stage.hpp  task.hpp  task_list.cpp  tick_task_list.cpp  utility.cpp  utility.hpp  value.hpp  weak_reference_counter.cpp  weak_reference_counter.hpp  widget.hpp  window.hpp
libgbstd/characters/: font.cpp  font_data.txt  point.cpp  text.cpp  text_buffer.cpp  text_cursor.cpp  text_screen.cpp  typewriter.cpp  unicode.cpp
libgbstd/file_ops/: wave.cpp
libgbstd/images/: canvas.cpp  canvas__draw.cpp  canvas__draw_string.cpp  image.cpp  image__png.cpp  misc.png.txt
libgbstd/jobs/: job.cpp  job_list.cpp  process.cpp
libgbstd/menus/: cursor.cpp  stack.cpp  table.cpp  view.cpp  window.cpp  window__.cpp  window_frame.cpp
libgbstd/parsers/: token.cpp  token_block.cpp  tokenizer.cpp  tokenizer__read_number.cpp
libgbstd/processes/: clock.cpp  execution.cpp  process.cpp  task.cpp
libgbstd/sounds/: modulation_status.cpp  noise_device.cpp  sawtooth_wave_device.cpp  short_noise_device.cpp  sine_wave_device.cpp  sound_device.cpp  square_wave_device.cpp  triangle_wave_device.cpp
libgbstd/values/: value.cpp  value_array.cpp  value_list.cpp  variable.cpp
libgbstd/widgets/: button.cpp  checkbox.cpp  dial.cpp  frame.cpp  icon.cpp  label.cpp  menu_handler.cpp  node.cpp  operating_node.cpp
libgbstd/windows/: component.hpp  widget.cpp  window.cpp
libgbstd/windows/components/: button.cpp  checkbox.cpp  dial.cpp  frame.cpp  iconshow.cpp  label.cpp  menu.cpp  radio_button.cpp
libgbstd/windows/icons/: icon.cpp
libge/: CMakeLists.txt  aniview.cpp  color_handler.cpp  color_holder.cpp  color_maker.cpp  context.cpp  context2.cpp  context__build_cell_table.cpp  context__build_core.cpp  core.cpp  core__create_sub_widget.cpp  core__do_on_mouse_act.cpp  core__draw.cpp  core__make_apng_stream.cpp  core__operate.cpp  core_display.cpp  core_paint.cpp  core_paint__draw.cpp  core_paint__make_widget.cpp  core_paint__operate.cpp  core_view.cpp  create_graphics_editor.cpp  drawing_recorder.cpp  ge.hpp  ge_context.hpp  previewer.cpp  seamless_pattern_view.cpp  underlay_stacker.cpp
libge/widgets/: color_holder.cpp  color_maker.cpp
libmkfont/: characters.txt  mkfont.cpp  mkfont.hpp  mkfont_bitmap.cpp  mkfont_character_selector.cpp
libonch/: CMakeLists.txt  onch.hpp  onch_cell.cpp  onch_definition.cpp  onch_element.cpp  onch_output_context.cpp  onch_sound.cpp  onch_space.cpp  onch_table.cpp  onch_text.cpp  onch_word.cpp
libsubiso/: CMakeLists.txt  subiso.hpp  subiso_actor.cpp  subiso_box.cpp  subiso_box_view.cpp  subiso_flag_timer.cpp  subiso_plane.cpp  subiso_plane_reference.cpp  subiso_plane_reference_stack.cpp  subiso_renderer.cpp  subiso_space.cpp  subiso_space_handler.cpp  subiso_space_view.cpp  subiso_stack_map.cpp
libww/: CMakeLists.txt  ww.hpp  ww_bar.cpp  ww_bar.hpp  ww_battle_context.cpp  ww_battle_context.hpp  ww_battle_context_callbacks.cpp  ww_battle_section.cpp  ww_battle_section.hpp  ww_battle_section_menu.cpp  ww_callbacks.cpp  ww_character.cpp  ww_character.hpp  ww_company.cpp  ww_company.hpp  ww_company_callbacks.cpp  ww_context.cpp  ww_context.hpp  ww_context_callbacks.cpp  ww_entry.cpp  ww_entry.hpp  ww_executive_context.cpp  ww_executive_context.hpp  ww_executive_context_callbacks.cpp  ww_field.cpp  ww_field.hpp  ww_force.cpp  ww_front_section.cpp  ww_front_section.hpp  ww_manage_section.cpp  ww_manage_section.hpp  ww_menu.cpp  ww_menu.hpp  ww_menu_cursor.cpp  ww_menu_table.cpp  ww_menu_view.cpp  ww_notifier.cpp  ww_notifier.hpp  ww_opening_section.cpp  ww_opening_section.hpp  (+7 more)
